# sycamore

./: .gitignore  Cargo.toml  LICENSE.md  README.md  calling_funcs.wasm  error  hello_world.wasm
examples/: assignment.sm  calling_funcs.sm  hello_world.sm
src/: codegen.rs  context.rs  lib.rs  main.rs  parser.rs  standard_library.rs  types.rs  wasi.rs
