[package]
name = "sycamore"
version = "0.1.0"
authors = ["Michael Gattozzi <self@mgattozzi.dev>"]
description = "The Sycamore Language Compiler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libsyc"
path = "src/lib.rs"

[[bin]]
# Short for sycamore compiler (also easier to type)
name = "syc"
path = "src/main.rs"

[dependencies]
ariadne = "^0.1.3"
clap = "=3.0.0-beta.4"
logos = "^0.12.0"
wasm-encoder = "^0.6.0"
wasmparser = "^0.80.0"
wasmtime = "^0.29.0"
wabt = "^0.10.0"
