[package]
name = "sycamore"
version = "0.1.0"
authors = ["Michael Gattozzi <self@mgattozzi.dev>"]
description = "The Sycamore Language Compiler"
edition = "2021"

[lib]
name = "libsyc"
path = "src/lib.rs"

[[bin]]
# Short for sycamore compiler (also easier to type)
name = "syc"
path = "src/main.rs"

[dependencies]
ariadne = "0.1.3"
bincode = "1.3.3"
clap = "=3.0.0-beta.5"
logos = "0.12.0"
serde = "1.0"
wasm-encoder = "0.8.0"
wasmparser = "0.81.0"
wasmtime = "0.31.0"
wasmtime-wasi = "0.31.0"
wabt = "0.10.0"
